# raylib_boilerplate

./: CMakeLists.txt  README.md  config.cmake.in  gen_cmake.py
.github/workflows/: build_and_test.yml
source/example/: CMakeLists.txt  main.c
